Fix readme modal responsiveness & fix button color issues on iOS

--- a/src/components/ReadMeModal/ReadMeModal.module.scss
+++ b/src/components/ReadMeModal/ReadMeModal.module.scss
@@ -6,14 +6,14 @@
   position: fixed;
   top: 50%;
   left: 50%;
-
+  max-height: 80%;
   transform: translate(-50%, -50%);
-  padding: 3rem 5rem;
+  padding: 2.5rem 0;
   border-radius: $borderRadius;
   font-size: 1.6rem;
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
+  gap: 2rem;
 
   &__CloseIcon {
     position: absolute;
@@ -22,6 +22,7 @@
     cursor: pointer;
     border-radius: 50%;
     transition: all 0.3s;
+    left: 3rem;
 
     svg {
       padding: 0.4rem;
@@ -38,10 +39,10 @@
 
   &__WavingIcon {
     align-self: center;
-    padding-bottom: 0.4rem;
+    //padding-bottom: 0.4rem;
     font-size: 2.4rem;
     display: inline-block;
-    animation: wavingEffect alternate 0.4s infinite both linear;
+    //animation: wavingEffect alternate 0.4s infinite both linear;
 
     // svg {
     //   stroke: $primaryColor;
@@ -52,20 +53,23 @@
 
   &__Heading {
     text-align: center;
+    padding: 0 4rem;
   }
 
   &__Content {
     text-align: justify;
     line-height: 2.4rem;
-    gap: 1.2rem;
+    gap: 1rem;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+    padding: 0 4rem;
 
     ul {
       margin-left: 1rem;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      gap: 0.4rem;
 
       li {
         &::marker {
@@ -92,6 +96,8 @@
     border-radius: $borderRadius;
     padding: 0.2rem 0.6rem;
     position: relative;
+    display: block;
+    align-self: center;
     &:link,
     &:visited {
       color: #fff;
@@ -108,14 +114,14 @@
       font-size: 2rem;
       animation: pointingFromRight alternate 0.3s infinite both linear;
     }
-    &::before {
-      content: "👆";
-      position: absolute;
-      bottom: -105%;
-      left: 30%;
-      font-size: 2rem;
-      animation: pointingFromBottom alternate 0.3s infinite both linear;
-    }
+    // &::before {
+    //   content: "👆";
+    //   position: absolute;
+    //   bottom: -105%;
+    //   left: 30%;
+    //   font-size: 2rem;
+    //   animation: pointingFromBottom alternate 0.3s infinite both linear;
+    // }
   }
 }
 
