--- a/src/index.scss
+++ b/src/index.scss
@@ -60,6 +60,7 @@ button {
   background: none;
   border: none;
   display: block;
+  color: $grayColorMain;
   cursor: pointer;
 }
 
