--- a/src/pages/Home/StaysListing/StaysListing.module.scss
+++ b/src/pages/Home/StaysListing/StaysListing.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 36rem;
-  gap: 6rem 2.5rem;
+  gap: 3rem 2.5rem;
   padding: 2rem 4rem;
 
   //larger than 1600
