--- a/src/pages/Signup/SignupInput/SignupInput.module.scss
+++ b/src/pages/Signup/SignupInput/SignupInput.module.scss
@@ -1,7 +1,7 @@
 @use "../../../sass-styles/variables" as *;
 
 .signupInput {
-  @include card;
+  @include card(1rem, 2rem);
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
